# simple_leaderboards

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  redis.conf
app/: __init__.py  cli.py  cli_commands.py  config.py  extensions.py  security_headers.py
app/admin/: __init__.py  api_test.py  auth.py  dashboard.py  forms.py  games.py  scores.py  users.py
app/api/: __init__.py  champions.py  errors.py  leaderboards.py  scores.py  sessions.py
app/models/: __init__.py  admin_action.py  base.py  game.py  score.py  user.py
app/public/: __init__.py  privacy.py
app/schemas/: champions.py  leaderboards.py  scores.py  sessions.py
app/services/: cache.py  champions.py  daily_seed.py  device_info.py  leaderboard_query.py  name_normalize.py  sanity.py  session_tokens.py  time_ranges.py
app/static/css/: app.css
app/static/js/: admin.js  (+2 more)
app/templates/: _macros.html  base.html
docs/: api.md  data_models.md
migrations/versions/: 1ba0a7567b1f_init.py  2b41ac9d5e3a_add_champions_partial_index.py  3c52bd6e7f10_add_game_privacy_fields.py
tests/: conftest.py  test_admin_api_test.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_games.py  test_admin_scores.py  test_admin_users.py  test_cache.py  test_champions_api.py  test_leaderboard_query.py  test_leaderboards_api.py  test_name_and_device.py  test_privacy.py  test_sanity.py  test_scores_api.py  test_security_headers.py  test_session_tokens.py  test_sessions_api.py  test_smoke.py  test_time_ranges.py
(+10 files in other folders)
