[project]
name = "simple-leaderboards"
version = "0.1.0"
description = "A self-hosted leaderboards service for video games."
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "Flask-Migrate>=4.0,<5.0",
    "Flask-Login>=0.6,<1.0",
    "Flask-WTF>=1.2,<2.0",
    "Flask-Limiter>=3.5,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.6,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "itsdangerous>=2.1,<3.0",
    "ua-parser>=0.18,<1.0",
    "gunicorn>=21.2,<23.0",
    "click>=8.1,<9.0",
    "WTForms>=3.1,<4.0",
    "limits[redis]>=3.10,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-flask>=1.3,<2.0",
    "fakeredis>=2.20,<3.0",
    "ruff>=0.4,<1.0",
    "freezegun>=1.4,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
